--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,19 @@ jobs:
         uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.6.x
-      - name: Build & Deploy to GitHub Pages
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
-          GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
-        uses: kadler/jekyll-deploy-gh-pages@master
+      - name: Set up Bundler and Dependencies
+        run: |
+          gem install bundler
+          bundle install
+      - name: Build the site
+        run: bundle exec jekyll build
+      - name: Deploy to GitHub Pages
+        run: |
+          cd build
+          remote_repo="https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+          git init
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git add .
+          git commit -m 'Action build'
+          git push --force "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" master:gh-pages
