Add and use jekyll-archives plugin

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,8 @@ main:
     url: /posts/
   - title: "Categories"
     url: /categories/
+  - title: "Archive"
+    url: /year-archive/
   # - title: "Pages"
   #   url: /pages/
   - title: "About"
