--- a/_config.yml
+++ b/_config.yml
@@ -107,8 +107,28 @@ remote_theme: "mmistakes/minimal-mistakes@4.15.2"
 minimal_mistakes_skin: "dark"
 
 plugins:
+  - jekyll-archives
   - jekyll-feed
   - jekyll-paginate
   - jekyll-redirect-from
   - jekyll-include-cache
   - jemoji
+
+category_archive:
+  type: jekyll-archives
+  path: /categories/
+tag_archive:
+  type: jekyll-archives
+  path: /tags/
+
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+  layouts:
+    category: archive-taxonomy
+    tag: archive-taxonomy
+  permalinks:
+    category: /categories/:name/
+    tag: /tags/:name/
+
