--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_source: kadler.github.io
 # Site Author
 author:
   name             : "Kevin Adler"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio-photo.jpg"
   bio              : "Open Source Dude"
   location         : "Rochester, MN"
   email            :
