Update Twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
       url: "https://github.com/kadler"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/kadler_ibm"
+      url: "https://twitter.com/kadlerio"
     - label: "Stack Overflow"
       icon: "fab fa-fw fa-stack-overflow"
       url: "https://stackoverflow.com/users/3245633/kevin-adler"
