--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,9 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
       - name: Build the site
-        run: bundle exec jekyll build
+        run: |
+          bundle exec jekyll build
+          cp CNAME _site
         env:
           TZ: UTC
       - name: Deploy to GitHub Pages
