Add Mastodon profile link and rel=me

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/kadler"
+    - label: "Mastodon"
+      icon: "fab fa-fw fa-mastodon"
+      url: "https://mastodon.lol/@kadler"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/kadlerio"
